Code style changes. Checkstyle plugin and config.